--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -811,15 +811,36 @@ button {
   min-height: 400px;
   padding: 20px 0px 40px 0px;
 
-  &__main {
+  .video__container {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    gap: 15px;
+  }
+  .video__block {
+    flex: 1 1 300px;
+  }
+  .video__block-content {
+    width: 100%;
+    aspect-ratio: 16/9;
+  }
+  .video__block-inner {
+    position: relative;
+  }
+  .video__block-button {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    & > iframe {
-      margin-bottom: 40px;
-    }
+    justify-content: center;
+    top: 0;
+    left: 0;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .video__block-button > img {
+    width: 70px;
   }
 }
 
