--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -844,4 +844,40 @@ button {
   }
 }
 
+// book.html
+
+.books {
+  min-height: 400px;
+  padding: 20px 0px 40px 0px;
+}
+.books__sport {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(180deg, #007aff 0%, #004fa5 58.8%, #003166 100%);
+  padding: 10px;
+  border-radius: 5px;
+}
+.books__sport > img {
+  width: 100%;
+  height: 380px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+.books__btn {
+  margin-bottom: 10px;
+  border: none;
+  font-weight: bold;
+  background: white;
+  border-radius: 5px;
+  transition: all ease 0.5s;
+  &:hover {
+    background: orange;
+    color: white;
+  }
+}
+.slick-slide {
+  margin: 0 10px;
+}
 @import "media";
