--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -850,6 +850,9 @@ button {
   min-height: 400px;
   padding: 20px 0px 40px 0px;
 }
+.sliders__Book {
+  margin-bottom: 40px;
+}
 .books__sport {
   display: flex;
   flex-direction: column;
