--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -596,6 +596,24 @@
   .skiing__title {
     font-size: 24px;
   }
+  .achievement {
+    &__title {
+      font-size: 24px;
+      margin-bottom: 0;
+    }
+    &__BigImg {
+      margin-bottom: 0px;
+    }
+    &__imgBlock {
+      margin: 0;
+    }
+    &__Bigtext {
+      &--center {
+        margin: 0px;
+        margin-bottom: 30px;
+      }
+    }
+  }
 }
 
 @media (max-width: 578px) {
@@ -642,6 +660,11 @@
   .books__sport > img {
     height: 300px;
   }
+  .achievement {
+    &__title {
+      font-size: 22px;
+    }
+  }
 }
 @media (max-width: 520px) {
   .slick-slide {
@@ -649,6 +672,11 @@
   }
   .books__sport > img {
     height: 380px;
+  }
+  .achievement {
+    &__img {
+      width: 100%;
+    }
   }
 }
 @media (max-width: 480px) {
@@ -779,6 +807,12 @@
   .skiing__title {
     font-size: 22px;
   }
+  .achievement {
+    &__title {
+      font-size: 20px;
+      margin: 19px 0;
+    }
+  }
 }
 @media (max-width: 380px) {
   .nav {
@@ -871,5 +905,11 @@
   }
   .skiing__title {
     font-size: 20px;
+  }
+  .achievement {
+    &__img--height {
+      width: 100%;
+      height: 400px;
+    }
   }
 }
