--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -51,6 +51,14 @@
       margin-top: 40px;
     }
   }
+  .news {
+    &__img {
+      height: 190px;
+    }
+  }
+  .news_block {
+    max-width: 300px;
+  }
 }
 @media (max-width: 1061px) {
   .header__nav {
@@ -81,6 +89,9 @@
     }
   }
 
+  .section__title {
+    padding: 20px 0 50px 0;
+  }
   .counter {
     &__main {
       max-width: 600px;
@@ -337,6 +348,16 @@
   }
 }
 
+@media (max-width: 992px) {
+  .news {
+    &__img {
+      height: 160px;
+    }
+  }
+  .news_block {
+    max-width: 270px;
+  }
+}
 @media (max-width: 972px) {
   .figure {
     &__main {
@@ -378,6 +399,14 @@
   }
   .slick-slide {
     margin: 0 20px;
+  }
+  .news {
+    &__img {
+      height: 150px;
+    }
+  }
+  .news_block {
+    max-width: 230px;
   }
 }
 @media (max-width: 782px) {
@@ -425,6 +454,17 @@
   }
   .slick-slide {
     margin: 0 10px;
+  }
+  .news {
+    flex-direction: column;
+    align-items: center;
+    &__img {
+      height: 220px;
+    }
+  }
+  .news_block {
+    max-width: 58%;
+    margin-bottom: 40px;
   }
 }
 @media (max-width: 641px) {
@@ -614,6 +654,14 @@
       }
     }
   }
+  .news {
+    &__img {
+      height: 240px;
+    }
+  }
+  .news_block {
+    max-width: 70%;
+  }
 }
 
 @media (max-width: 578px) {
@@ -667,6 +715,9 @@
   }
 }
 @media (max-width: 520px) {
+  .sports {
+    padding: 0;
+  }
   .slick-slide {
     width: 380px;
   }
@@ -677,6 +728,14 @@
     &__img {
       width: 100%;
     }
+  }
+  .news {
+    &__img {
+      height: 240px;
+    }
+  }
+  .news_block {
+    max-width: 90%;
   }
 }
 @media (max-width: 480px) {
@@ -813,6 +872,9 @@
       margin: 19px 0;
     }
   }
+  .news_block {
+    max-width: 100%;
+  }
 }
 @media (max-width: 380px) {
   .nav {
@@ -910,6 +972,11 @@
     &__img--height {
       width: 100%;
       height: 400px;
+    }
+  }
+  .news {
+    &__img {
+      height: 200px;
     }
   }
 }
