--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -968,7 +968,7 @@ button {
 }
 .achieve__img {
   width: 220px;
-  height: 240px;
+  height: 250px;
   border-radius: 50%;
   padding: 10px;
   margin-bottom: 10px;
@@ -988,4 +988,26 @@ button {
   margin: 0 auto;
 }
 
+// news =============================
+
+.news {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  color: white;
+  margin-bottom: 10px;
+  &__img {
+    width: 100%;
+    height: 210px;
+    border-radius: 5px;
+    margin-bottom: 6px;
+  }
+}
+.news_block {
+  max-width: 340px;
+}
+
+.news__descriptions {
+  margin-top: 14px;
+}
 @import "media";
