--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -7,7 +7,7 @@
   }
   .header__image {
     &-photo {
-      max-width: 480px;
+      max-width: 440px;
     }
   }
   .slick-slide {
@@ -362,6 +362,20 @@
   }
   .games {
     max-width: 84%;
+  }
+  .club__cards {
+    padding-top: 10px;
+    max-width: 550px;
+    margin: 0 auto;
+  }
+  .club__card {
+    max-width: 220px;
+    margin: 40px 0 20px 0;
+  }
+  .club__card-img {
+    &--height2 {
+      max-width: 190px;
+    }
   }
 }
 @media (max-width: 972px) {
@@ -752,6 +766,19 @@
   .news_block {
     max-width: 90%;
   }
+  .club__cards {
+    width: 90%;
+    justify-content: center;
+  }
+  .club__card {
+    max-width: 210px;
+    margin: 30px 0 30px 0;
+  }
+  .club__card-img {
+    &--height2 {
+      max-width: 180px;
+    }
+  }
 }
 @media (max-width: 480px) {
   .nav {
@@ -1015,5 +1042,8 @@
   }
   .resources__title {
     font-size: 26px;
+  }
+  .club__cards {
+    width: 100%;
   }
 }
