--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -109,6 +109,7 @@ h6 {
 .header__background {
   background: linear-gradient(180deg, #007aff 0%, #003166 100%);
 }
+
 .logo {
   font-weight: 700;
   font-size: 24px;
@@ -273,7 +274,7 @@ h6 {
 }
 .sub__title {
   font-size: 28px;
-  max-width: 390px;
+  max-width: 410px;
 }
 .header__image {
   &-photo {
@@ -951,7 +952,7 @@ button {
   }
   &__BigImg {
     display: block;
-    width: 90%;
+    width: 82%;
     margin: 0 auto;
     border-radius: 5px;
     margin-bottom: 60px;
@@ -1009,12 +1010,19 @@ button {
 
 // news =============================
 
+.MainNews {
+  min-height: 400px;
+  padding: 40px 0px 0px 0px;
+}
 .news {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  color: white;
-  margin-bottom: 10px;
+  max-width: 98%;
+  min-height: 200px;
+  margin: 20px auto;
+  color: black;
+  font-size: 17px;
   &__img {
     width: 100%;
     height: 210px;
@@ -1024,6 +1032,7 @@ button {
 }
 .news_block {
   max-width: 340px;
+  margin-bottom: 40px;
 }
 
 .news__descriptions {
