--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -157,7 +157,7 @@ h6 {
   background: linear-gradient(314.97deg, #005c91 -16.21%, #06a1c1 71.29%);
   right: 0;
   top: 100%;
-  padding: 30px;
+  padding: 11px;
   display: block;
   border-radius: 5px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2);
@@ -1191,4 +1191,40 @@ button {
     }
   }
 }
+
+// ethics.html ====================
+.ethics__main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 40px 0;
+}
+.ethics__card {
+  max-width: 280px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #004fa5;
+  text-align: center;
+  color: white;
+}
+.ethics__card-img {
+  width: 100%;
+  max-height: 310px;
+  border-radius: 5px;
+}
+.ethics__card-text {
+  padding: 10px 0 0 0;
+  font-size: 16px;
+}
+.ethics__card-btn {
+  width: 100px;
+  border-radius: 5px;
+  margin: 20px 0 10px 0;
+  border: none;
+  font-size: 15px;
+  font-weight: bold;
+  color: #004fa5;
+  background-color: white;
+}
+
 @import "media";
