--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -347,11 +347,13 @@ h6 {
   border-radius: 5px;
   background-color: white;
   &-img {
-    width: 47%;
-    height: 130px;
+    width: 60%;
+    height: 140px;
     margin: 0 auto;
-    background-color: #004fa5;
     border-radius: 5px;
+    &--bg {
+      background-color: #004fa5;
+    }
   }
   &-name {
     font-size: 17px;
@@ -1170,7 +1172,9 @@ button {
   &__img {
     max-width: 90%;
     height: 160px;
+    padding: 10px;
     border-radius: 10%;
+    background-color: white;
   }
   &__card {
     background-color: #004fa5;
