--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -379,7 +379,21 @@
     margin: 4px 0 0 6px;
     transform: rotate(-90deg);
   }
-  .news {
+
+  .blocks {
+    width: 400px;
+    &__img {
+      width: 240px;
+      height: 300px;
+    }
+    &__descr {
+      &-name {
+        font-size: 19px;
+      }
+    }
+  }
+
+  .blocks .news {
     &__img {
       height: 170px;
     }
@@ -455,6 +469,20 @@
     }
   }
   .blocks {
+    width: 360px;
+    min-height: 600px;
+    &__img {
+      width: 240px;
+      height: 290px;
+    }
+    &__descr {
+      &-name {
+        font-size: 18px;
+      }
+    }
+  }
+
+  .blocks {
     padding: 40px 10px;
     max-width: 100%;
   }
@@ -507,6 +535,26 @@
   }
 }
 @media (max-width: 830px) {
+  .ministry__main {
+    justify-content: center;
+  }
+  .ministry__blocks {
+    margin-bottom: 40px;
+  }
+  .blocks {
+    width: 480px;
+    min-height: 600px;
+    &__img {
+      width: 280px;
+      height: 340px;
+    }
+    &__descr {
+      max-width: 100%;
+      &-name {
+        font-size: 21px;
+      }
+    }
+  }
   .teach__main {
     max-width: 80%;
     margin: 0 auto;
@@ -520,23 +568,6 @@
 @media (max-width: 782px) {
   .nav {
     width: 48%;
-  }
-  .blocks {
-    padding: 40px 20px;
-    &__img {
-      max-width: 200px;
-      max-height: 250px;
-    }
-    &__descr {
-      max-width: 100%;
-      margin-left: 30px;
-      &-contact {
-        margin-bottom: 30px;
-      }
-      &-name {
-        font-size: 19px;
-      }
-    }
   }
   .modal__body {
     & p {
@@ -603,6 +634,9 @@
   .ethics__card-text {
     font-size: 17px;
   }
+  .noCorruption__img {
+    width: 82%;
+  }
 }
 @media (max-width: 641px) {
   .nav {
@@ -660,33 +694,6 @@
   }
   .main__Bigtext {
     font-size: 18px;
-  }
-  .blocks {
-    flex-direction: column;
-    align-items: center;
-    max-width: 80%;
-    padding: 40px 20px;
-    &__img {
-      max-width: 260px;
-      max-height: 260px;
-      margin-bottom: 10px;
-    }
-    &__descr {
-      max-width: 100%;
-      margin-left: 0px;
-      text-align: center;
-      &-contact {
-        margin-bottom: 30px;
-      }
-      &-name {
-        font-size: 19px;
-      }
-    }
-    &__modalBtn {
-      display: inline-block;
-      width: 120px;
-      font-size: 15px;
-    }
   }
 
   .modal__body {
@@ -863,6 +870,18 @@
 @media (max-width: 520px) {
   .nav {
     width: 60%;
+  }
+  .blocks {
+    width: 100%;
+    &__img {
+      width: 260px;
+    }
+    &__descr {
+      max-width: 100%;
+      &-name {
+        font-size: 19px;
+      }
+    }
   }
   .sports {
     padding: 0;
@@ -1061,12 +1080,22 @@
   .games {
     max-width: 100%;
   }
+  .noCorruption__img {
+    width: 90%;
+  }
 }
 @media (max-width: 440px) {
   .nav {
     width: 67%;
   }
-
+  .blocks {
+    width: 100%;
+    min-height: 600px;
+    &__img {
+      width: 220px;
+      height: 290px;
+    }
+  }
   .teach__main {
     justify-content: center;
   }
@@ -1118,19 +1147,11 @@
   .main__Bigtext {
     font-size: 16px;
   }
+
   .blocks {
     &__img {
-      max-width: 240px;
-      max-height: 220px;
-      margin-bottom: 0px;
-    }
-    &__descr {
-      & p {
-        font-size: 14.7px;
-      }
-      &-name {
-        font-size: 16px;
-      }
+      width: 200px;
+      height: 260px;
     }
     &__modalBtn {
       display: inline-block;
@@ -1139,6 +1160,7 @@
       font-size: 14px;
     }
   }
+
   .relationship__title {
     font-size: 28px;
   }
@@ -1221,5 +1243,8 @@
   }
   .ethics__card-btn {
     font-size: 14px;
+  }
+  .noCorruption__img {
+    width: 100%;
   }
 }
