--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -675,25 +675,29 @@ button {
   min-height: 400px;
   padding: 40px 0;
 }
+.ministry__main {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 .blocks:last-child {
   margin-bottom: 0;
 }
 .blocks {
-  margin: 0 auto 40px auto;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  margin: 0 auto 40px auto;
   padding: 40px 20px;
-  max-width: 80%;
-  min-height: 340px;
+  text-align: center;
+  width: 460px;
+  height: 660px;
   border-radius: 5px;
   background: linear-gradient(180deg, #007aff 0%, #004fa5 58.8%, #003166 100%);
   &__img {
-    max-width: 240px;
-    max-height: 290px;
+    width: 250px;
+    height: 310px;
     border-radius: 5px;
-    &--height {
-      max-height: 190px;
-    }
+    margin: 0 auto;
   }
   &__descr {
     max-width: 420px;
@@ -709,7 +713,7 @@ button {
       margin-top: 20px;
     }
     &-contact {
-      margin-bottom: 100px;
+      margin-bottom: 30px;
     }
   }
   &__modalBtn {
@@ -722,6 +726,7 @@ button {
     font-weight: bold;
     color: #004fa5;
     background-color: white;
+    margin: 0 auto;
   }
 }
 .modal-content {
@@ -730,6 +735,7 @@ button {
 
 .modal__body {
   color: #000;
+  text-align: start;
   & p {
     font-size: 19px;
   }
@@ -1231,4 +1237,7 @@ button {
   background-color: white;
 }
 
+.noCorruption__img {
+  width: 90%;
+}
 @import "media";
