--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -153,8 +153,8 @@ h6 {
 
 .nav__list--dropdown {
   position: absolute;
-  // background: linear-gradient(180deg, #007aff 0%, #004fa5 58.8%, #003166 100%);
-  background: linear-gradient(314.97deg, #005c91 -16.21%, #06a1c1 71.29%);
+  // background: linear-gradient(314.97deg, #005c91 -16.21%, #06a1c1 71.29%);
+  background: linear-gradient(to bottom, #00b4db, #0083b0);
   right: 0;
   top: 100%;
   padding: 11px;
@@ -347,7 +347,7 @@ h6 {
   border-radius: 5px;
   background-color: white;
   &-img {
-    width: 60%;
+    width: 58%;
     height: 140px;
     margin: 0 auto;
     border-radius: 5px;
