--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -278,9 +278,14 @@ h6 {
 .top__title {
   font-size: 26px;
 }
+
 .sub__title {
   font-size: 28px;
   max-width: 410px;
+}
+.sub__title-kafedra {
+  width: 500px;
+  font-size: 26px;
 }
 .sub__title--size {
   font-size: 26px;
