--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -574,7 +574,13 @@
       font-size: 17px;
     }
   }
-
+  .header__text {
+    max-width: 100%;
+  }
+  .sub__title-kafedra {
+    width: 500px;
+    font-size: 26px;
+  }
   .secondCard {
     max-width: 100%;
     &__image {
@@ -647,12 +653,10 @@
   .dropdown-list__link {
     padding: 10px 30px;
   }
-
+  .sub__title-kafedra {
+    width: 100%;
+  }
   .header {
-    &__text {
-      max-width: 80%;
-    }
-
     &__image {
       margin-bottom: 80px;
       &-photo {
@@ -821,6 +825,9 @@
   .nav {
     width: 56%;
   }
+  .sub__title-kafedra {
+    font-size: 24px;
+  }
   .modal-content {
     margin: 0 auto;
     max-width: 480px;
@@ -904,6 +911,9 @@
   }
   .news_block {
     max-width: 90%;
+  }
+  .managers__title {
+    font-size: 28px;
   }
   .club__cards {
     width: 90%;
@@ -1049,7 +1059,7 @@
     }
   }
   .managers__title {
-    padding: 0px 0;
+    padding: 30px 0 0 0;
   }
   .orders {
     &__item {
@@ -1088,6 +1098,9 @@
   .nav {
     width: 67%;
   }
+  .sub__title-kafedra {
+    font-size: 23px;
+  }
   .blocks {
     width: 100%;
     min-height: 600px;
@@ -1121,10 +1134,8 @@
   .dropdown-list__link {
     width: 123%;
   }
+
   .header {
-    &__text {
-      max-width: 100%;
-    }
     .top__title {
       font-size: 20px;
     }
@@ -1226,6 +1237,9 @@
     margin-bottom: 20px;
   }
   .resources__title {
+    font-size: 26px;
+  }
+  .managers__title {
     font-size: 26px;
   }
   .club__cards {
