--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -345,6 +345,9 @@ h6 {
 // section relationship ================
 .relationship {
   min-height: 264px;
+  &__title {
+    margin-top: 70px;
+  }
 }
 .relationship__block {
   padding: 14px 5px;
@@ -444,7 +447,6 @@ button {
 
 .teachers {
   min-height: 540px;
-  padding-bottom: 100px;
 }
 
 .sliders {
@@ -511,6 +513,7 @@ button {
 
 .footer {
   min-height: 200px;
+  margin-top: 100px;
   background: linear-gradient(88.32deg, #005c91 53.85%, #00b4d6 128.67%);
   border-radius: 20px 20px 0px 0px;
   &__wrapper {
