--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -178,7 +178,7 @@ h6 {
 .dropdown-submenu__item {
   flex-grow: 1;
   min-width: 200px;
-  padding: 0 30px;
+  padding: 0;
 }
 
 .dropdown-submenu__list {
