--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -903,7 +903,7 @@
   .sliders_hockey {
     &-img {
       width: 80%;
-      height: 160px;
+      height: 140px;
     }
   }
 }
@@ -966,6 +966,12 @@
   }
   .teach__card {
     max-width: 180px;
+  }
+  .sliders_hockey {
+    &-img {
+      width: 70%;
+      height: 120px;
+    }
   }
 }
 @media (max-width: 480px) {
@@ -1128,8 +1134,8 @@
   }
   .sliders_hockey {
     &-img {
-      width: 78%;
-      height: 200px;
+      width: 54%;
+      height: 210px;
     }
   }
 }
@@ -1299,5 +1305,11 @@
   }
   .noCorruption__img {
     width: 100%;
+  }
+  .sliders_hockey {
+    &-img {
+      width: 58%;
+      height: 180px;
+    }
   }
 }
